src/user.css
/* ... */
.main-playlistEditDetailsModal-titleInput,
.main-playlistEditDetailsModal-descriptionTextarea,
.profile-userEditDetails-nameInput,
.playlist-inlineSearchBox-filterInput {
  border-radius: var(--border-radius-2) !important;
}

.profile-userEditDetails-labelText:before {
  bottom: 8px !important;
}

.main-playlistEditDetailsModal-titleInput::placeholder,
.main-playlistEditDetailsModal-descriptionTextarea::placeholder {
  color: var(--spice-text);
}

.main-editImageButton-overlay {
  background-color: rgba(var(--spice-rgb-card), 0.7);
}

/* dialogs */

.main-deletePlaylistDialog-container,
.main-deleteFolderDialog-container {
  background-color: var(--spice-card);
  color: var(--spice-text);
  border-radius: var(--border-radius-1);
}

.main-deletePlaylistDialog-secondaryButton,
.main-deleteFolderDialog-secondaryButton {
  color: var(--spice-button);
}

.main-deletePlaylistDialog-buttonContainer > :last-child,
.main-deleteFolderDialog-buttonContainer > :last-child {
  background-color: var(--spice-notification-error);
}

/* friend activity */

.spotify__container--is-desktop.spotify__os--is-windows
  .Root__top-container--right-sidebar-visible
  .main-topBar-container {
  padding-inline-end: 167px;
}

.main-connectToFacebook-container {
  margin-top: 50px;
}

.main-connectToFacebook-text,
.main-connectToFacebook-disclaimer,
.main-connectToFacebook-headerTitle,
.main-addFriendsView-headerText p {
  color: var(--spice-text);
}

.VLKqDIGaQn2bILzJKSZ0 {
  background-color: var(--spice-card) !important;
}

.main-addFriendsView-header {
  margin-top: 16px;
  border-bottom: 1px solid var(--spice-selected-row) !important;
}

.main-addFriendsView-facebookIconWrapper {
  background-color: #008aff !important;
}

.main-addFriendsView-filterInput {
  background-color: var(--spice-card) !important;
  color: var(--spice-text) !important;
}

.main-addFriendsView-filterInput::placeholder {
  color: var(--spice-text) !important;
}

.main-buddyFeed-header {
  opacity: 1 !important;
}

.Root__right-sidebar {
  margin-top: 25px;
  height: calc(100% - 135px);
}

.main-buddyFeed-findFriendsIcon,
.main-buddyFeed-addFriendPlaceholderIcon {
  color: var(--spice-text) !important;
}

.main-buddyFeed-username a {
  color: var(--spice-text) !important;
}

.main-buddyFeed-artistAndTrackName a,
.main-buddyFeed-activityMetadata,
.main-buddyFeed-timestamp,
.main-buddyFeed-playbackContextLink,
.b9rqRkvRvhrSY4FYHQVC,
.xHc_2FQr3NxfCgfDSVhY {
  color: var(--spice-subtext) !important;
}

.main-buddyFeed-friendActivity {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-1);
  margin: 8px 0;
  padding: 8px 12px 8px 12px;
}

.main-buddyFeed-addFriendsContainer {
  background-color: var(--spice-main);
}

.main-buddyFeed-buddyFeedRoot,
.main-buddyFeed-buddyFeed,
aside[aria-label='Friend Activity'] {
  width: 280px;
  z-index: 0;
}

.main-buddyFeed-buddyFeedRoot .main-avatar-avatar,
aside[aria-label='Friend Activity'] .main-avatar-avatar {
  margin-right: 8px;
}

.main-buddyFeed-activityMetadata {
  max-width: 100vw;
}

/* settings */

.x-settings-equalizerSection {
  border-radius: var(--border-radius-2);
  background-color: var(--spice-card);
}

.x-settings-equalizerPresetsContainer > span > .main-dropDown-dropDown {
  background-color: var(--spice-selected-row) !important;
}

.x-settings-crossFadeContainer {
  padding-right: 10px;
}

.main-dropDown-dropDown,
option {
  color: var(--spice-text);
}

option {
  background-color: var(--spice-card);
}

.main-dropDown-dropDown,
select {
  border-radius: var(--border-radius-3) !important;
}

.x-toggle-indicatorWrapper {
  background-color: transparent;
  height: 20px;
  width: 40px;
  box-shadow: 0 0 0 1px var(--spice-subtext) !important;
}

input:hover:not([disabled], :active) ~ .x-toggle-indicatorWrapper {
  background-color: var(--spice-selected-row);
}

input:checked ~ .x-toggle-indicatorWrapper {
  background-color: var(--spice-button);
  box-shadow: none !important;
}

.x-toggle-indicator {
  background-color: var(--spice-subtext);
  height: 12px;
  width: 12px;
  top: 4px;
  left: 3px;
  transform: scale(1);
  transition: transform 50ms ease;
}

input:not([disabled]) ~ .x-toggle-indicatorWrapper:hover .x-toggle-indicator {
  transform: scale(1.2);
}

input:checked ~ .x-toggle-indicatorWrapper .x-toggle-indicator {
  background-color: var(--spice-main);
  right: 4px;
}

.x-settings-facebookButton,
.main-connectToFacebook-facebookButton {
  color: var(--spice-shadow);
}

.x-proxySettings-proxyInput {
  border-radius: var(--border-radius-2) !important;
  background-color: var(--spice-card) !important;
}

.x-proxySettings-proxyInput::placeholder {
  color: var(--spice-subtext);
}

.x-proxySettings-proxyInput:focus {
  border-color: var(--spice-button-active);
}

.TypeElement-viola-textSubdued-type {
  color: var(--spice-subtext);
}

/* connect device menu */

.main-devicePicker-header > .main-devicePicker-nowPlayingActiveIcon[src*='equaliser'] {
  -webkit-mask-image: var(--equalizer-svg);
  background: var(--spice-button);
  content-visibility: hidden;
  -webkit-mask-repeat: no-repeat;
  scale: 0.8;
}

.main-devicePicker-troubleshootingItemIcon {
  fill: var(--spice-text);
}

.hcuLp8V4uEEfWZ4k6aLV {
  background-color: rgba(var(--spice-rgb-card), 0.4);
}

.hcuLp8V4uEEfWZ4k6aLV:hover,
.hcuLp8V4uEEfWZ4k6aLV:focus {
  background-color: rgba(var(--spice-rgb-selected-row), 0.5);
}

.main-connectBar-connectBar {
  background-color: var(--spice-accent) !important;
  --text-base: var(--spice-alt-text) !important;
  --essential-base: var(--spice-alt-text) !important;
  border-radius: 4px;
  height: auto !important;
  width: auto !important;
  padding: 8px;
  position: absolute;
  right: 5px;
  bottom: 100px;
  color: var(--spice-alt-text) !important;
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
}

.main-connectBar-connectBar::after {
  border-bottom: none !important;
}
/* ... */

